fix: dark mode fullscreen

--- a/main.css
+++ b/main.css
@@ -57,6 +57,7 @@ html[data-theme="light"]{
 
 * { box-sizing: border-box; }
 html, body { height: 100%; }
+html { color-scheme: light dark; }
 
 body {
   margin: 0;
